remove unused html template and add lang attribute

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -12,13 +12,6 @@
     <title>TagCloud</title>
   </head>
   <body>
-    <div style="display: none" viewBox="0 0 24 24">
-      <svg id="icon-logo" viewBox="0 0 1000 1000">
-        <path
-          d="M942.3 629.8V10H292.8c-59.9 0-65.5 57.9-65.5 57.9L57.5 990s797.1-276.2 843.8-295c46.6-18.6 41-65.2 41-65.2zM585.8 639s-82.1 11.2-155-44.8V129.5h100.9v166.2s-7.6 15 14.9 0c0 0 29.8-39.2 84.1-33.6 0 0 112 0 110.1 162.4 0-.1 27.9 203.4-155 214.5zm-34.7-276.4V551.2s97.1 31.8 99-49.5c1.8-81.2 0-103.5 0-103.5s3.7-72.9-99-35.6z"
-        />
-      </svg>
-    </div>
     <div id="app"></div>
   </body>
 </html>
